--- a/src/app/components/registration/registration.html
+++ b/src/app/components/registration/registration.html
@@ -5,6 +5,7 @@
             <label for="reg-firstname">Firstname</label>
             <input type="text"
                    required
+                   autofocus
                    id="reg-firstname"
                    class="form-control"
                    ng-model="vm.userData.firstname" />
@@ -35,6 +36,7 @@
         </div>
         <div class="form-group">
             <button class="btn btn-primary"
+                    ng-disabled="registerForm.$invalid"
                     ng-click="vm.register()">
                 Register
             </button>
