--- a/src/app/components/registration/registration.html
+++ b/src/app/components/registration/registration.html
@@ -36,7 +36,7 @@
         </div>
         <div class="form-group">
             <button class="btn btn-primary"
-                    ng-disabled="registerForm.$invalid"
+                    ng-disabled="registrationForm.$invalid"
                     ng-click="vm.register()">
                 Register
             </button>
