user service data, routes

--- a/src/index.jade
+++ b/src/index.jade
@@ -10,5 +10,5 @@ html(lang="en")
     body(ng-app="l4cApp")
         h1 Hello
         .container
-            l4c-registration
+            div(ng-view)
         script(src="/dist/app.js")
