--- a/src/index.jade
+++ b/src/index.jade
@@ -7,8 +7,10 @@ html(lang="en")
         title="Lensa"
         link(href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css", rel="stylesheet")
         link(href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css", rel="stylesheet")
-    body(ng-app="l4cApp")
+    body(ng-app="frontendApp")
         h1 Hello
         .container
             div(ng-view)
+        script(src="https://code.jquery.com/jquery-2.2.2.min.js")
+        script(src="/games/virtuoso-desktop.js")
         script(src="/dist/app.js")
