webpack-hot, webpack-dev middleware

--- a/src/app/components/game/game.html
+++ b/src/app/components/game/game.html
@@ -2,7 +2,7 @@
     <div ng-switch="vm.templateName">
         <div ng-switch-when="instructions">
             <ul>
-                <li>8 minumtes</li>
+                <li>8 minutes</li>
                 <li>Pay attention</li>
             </ul>
             <button class="btn btn-primary"
